--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -264,6 +264,7 @@
 
 	.other-projects-section-title {
 		justify-content: center;
+		padding-top: 1rem;
 		margin-bottom: 1.5rem;
 	}
 
@@ -273,7 +274,7 @@
 		margin-top: 3rem;
 		margin-bottom: 3rem;
 		padding-top: 1.5rem;
-		padding-bottom: 1.5rem;
+		padding-bottom: 0px;
 	}
 
 	.featured-project-container.reverse {
