--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -156,6 +156,8 @@ button {
 
 	.work-container {
 		padding-top: 1rem;
+		padding-bottom: 0px;
+		margin-bottom: 1rem;
 		flex-wrap: wrap;
 	}
 
